fixed scrollbar issue on footer hide

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -13,6 +13,7 @@ body
   font-weight: 300
   margin: 0
   padding: 0
+  overflow-y: hidden
   &.tully
     background-color: #00173d
     color:            #fff
